(maint) Enable GC profiling for debugging acceptance
pxp-agent acceptance tests are consistently failing due to pauses that
result in dropping messages as expired. Enable profiling to detect
whether these are caused by garbage collection.